fix overwrap on short byline

--- a/css/default.css
+++ b/css/default.css
@@ -384,6 +384,14 @@ form
 		padding-right: 6em;
 	}
 
+	.short_byline
+	{
+		font-size: 1.55em;
+		color: #656565;
+		line-height: 1.7em;
+		font-weight: 100;
+	}
+
 
 /*category boxes*/
 
